[package]
name = "servar"
version = "0.1.0"
edition = "2021"
description = "Multi Utility Server"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/callrbx/servar"
repository = "https://github.com/callrbx/servar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
tokio = { version = "*", features = ["full"] }
build_html = "*"
warp = "*"
once_cell = "*"
emojis = "*"